--- a/config.env
+++ b/config.env
@@ -1,10 +1,10 @@
 CONFIG_ENV=config.env
 #内核源地址
-KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_oneplus_sm8250
+KERNEL_SOURCE=https://github.com/whatawurst/android_kernel_sony_msm8998
 #分支
-KERNEL_SOURCE_BRANCH=lineage-21
+KERNEL_SOURCE_BRANCH=lineage-19.1
 #内核配置文件
-KERNEL_CONFIG=kona_defconfig
+KERNEL_CONFIG=lineage-msm8998-yoshino-poplar_defconfig
 
 #使用Google GCC 4.9构建内核，对于老内核使用，默认使用aosp-clang-r383902b+Google-gcc-4.9编译内核
 USE_GCC=true 
